# 1inch-lop

./: .env.example  .gitignore  1inch-cli.sh  QUICK_START.md  README.md  cleanup_and_organize.sh  deploy.sh  foundry.toml  mainnet_test_results.txt  setup.sh  setup_cli.sh  test-suite.sh  test_mainnet.sh
cli/: Cargo.toml
cli/src/: config.rs  main.rs  utils.rs
cli/src/commands/: combined.rs  config.rs  examples.rs  interactive.rs  mod.rs  options.rs  twap.rs  volatility.rs
demos/: Readme.md  executive-summary.sh  interactive-demo.sh  mainnet-fork-demo.sh  quick-demo.sh  vector-plus-demo.sh  vector-plus-showcase.sh
docs/: CLI.md  TESTING.md  contracts.md
script/: deply.s.sol
src/calculators/: EnhancedTWAPVolatilityExecutor.sol  EnhancedVolatilityCalculator.sol  OptionsCalculator.sol  SimpleTWAPCalculator.sol  SimpleVolatilityCalculator.sol  TWAPCalculator.sol  VolatilityCalculator.sol
src/interfaces/: IAmountGetter.sol  IOrderMixin.sol  IVectorPlus.sol
test/: MainnetForkTest.t.sol
test/integration/: OneinchIntegration.t.sol
test/mainnet-fork-tests/helpers/: BaseMainnetTest.sol
test/mainnet-fork-tests/twap/: TWAPExecutionTests.t.sol
test/mainnet-fork-tests/volatility/: VolatilityStrategyTests.t.sol
test/unit/: EnhancedTWAPVolatility.t.sol  OptionsCalculator.t.sol  SimpleTWAPCalculator.t.sol  SimpleVolatilityCalculator.t.sol  TWAPCalculator.t.sol  VolatilityCalculator.t.sol
