[package]
name = "vector-plus"
version = "0.1.0"
edition = "2021"
description = "Vector Plus - Advanced Trading Strategies CLI for 1inch"
authors = ["ETHGLOBAL Prague"]
license = "MIT"

[[bin]]
name = "vector-plus"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
colored = "2.0"
dialoguer = "0.11"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"